introduing maven modules ...
* modularized codebase into "base" and "cli" using maven
* renamed the package name from "edu.brandies.lapps.stanford.corenlp" to "edu.brandeis.lapps.corenlp"